--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,11 +9,15 @@
 
     %link{href: '/css/bootstrap.min.css', rel:'stylesheet'}
     %link{href: '/css/bootstrap-datetimepicker.min.css', rel:'stylesheet'}
+    %link{href: '/css/bootstrap-editable.css', rel:'stylesheet'}
     %script{src: '/js/jquery.min.js'}
     %script{src: '/js/jquery_ujs.js'}
     %script{src: '/js/bootstrap.min.js'}
     %script{src: '/js/moment.min.js'}
     %script{src: '/js/bootstrap-datetimepicker.min.js'}
+    %script{src: '/js/bootstrap3-autocomplete-input.min.js'}
+    %script{src: '/js/bootstrap3-typeahead.min.js'}
+    %script{src: '/js/bootstrap-editable.min.js'}
 
     = stylesheet_link_tag 'application'
     = javascript_include_tag 'application'
