--- a/app/views/tqrdc/groups/_form.html.haml
+++ b/app/views/tqrdc/groups/_form.html.haml
@@ -6,9 +6,12 @@
     = f.input :name
     = f.input :description
     = f.input :score
-    = f.input :owner_id
-    = f.input :creator_id
-    = f.input :updater_id
+
+    = f.input :owner, as: :autocomplete, :source_query => autocomplete_user_email_users_url, :items => 20, :minLength => 1,
+      :hint => '請使用大寫輸入負責人, 1個字符后系統會給出建議清單'
+
+    = f.input :creator_id, as: :hidden
+    = f.input :updater_id, as: :hidden
 
   .form-actions
     .clearfix
