--- a/app/views/tqrdc/groups/_form.html.haml
+++ b/app/views/tqrdc/groups/_form.html.haml
@@ -2,12 +2,12 @@
   = f.error_notification
 
   .form-inputs
-    = f.input :id
+    = # f.input :id
     = f.input :name
     = f.input :description
     = f.input :score
 
-    = f.input :owner, as: :autocomplete, :source_query => autocomplete_user_email_users_url, :items => 20, :minLength => 1,
+    = f.input :owner, :as => :autocomplete, :source_query => autocomplete_user_email_users_url, :items => 20, :minLength => 1,
       :hint => '請使用大寫輸入負責人, 1個字符后系統會給出建議清單'
 
     = f.input :creator_id, as: :hidden
