--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -2,10 +2,11 @@
 -if user_signed_in?
   %li=# link_to 'Edit account', edit_user_registration_path
   %li= link_to 'Sign out', destroy_user_session_path, :method=>'delete'
+  %li= link_to 'Users', users_path if current_user.role == 'admin'
 -else
   %li= link_to 'Sign in', new_user_session_path
-  %li=# link_to 'Sign up', new_user_registration_path
 
--if user_signed_in?
-  %li= link_to 'Users', users_path
+- if user_signed_in? and current_user.role == 'supplier'
+  %li= link_to t('attributes.u1_score'), supplier_entry_tqrdc_scores_path
+
 
