--- a/app/views/tqrdc/orders/index.html.haml
+++ b/app/views/tqrdc/orders/index.html.haml
@@ -14,9 +14,7 @@
       %tr
         %th= t('action')
 
-        %th= t('attributes.id')
-
-        %th= t('attributes.supplier_id')
+        %th= t('attributes.supplier')
 
         %th= t('attributes.period')
 
@@ -34,10 +32,7 @@
             |
             = link_to t('delete'), tqrdc_order, :method => :delete, :data => { :confirm => t('confirm_delete')}
 
-
-          %td= tqrdc_order.id
-
-          %td= tqrdc_order.supplier_id
+          %td= tqrdc_order.supplier
 
           %td= tqrdc_order.period
 
