--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,8 +14,6 @@
  * require_self
  */
 
-th{
-  background-color: #F8F8F8;
-}
-
+th{background-color: #F8F8F8;}
 a:hover {color: red; text-decoration:underline;}
+.container-form{max-width: 768px}
