--- a/app/views/tqrdc/scores/supplier_entry.html.haml
+++ b/app/views/tqrdc/scores/supplier_entry.html.haml
@@ -20,7 +20,7 @@
                 - if order_line.order_group_id == order_group.id
                   - i = i + 1
                   .panel.panel-default
-                    .panel-heading.panel-title
+                    .panel-heading
                       = "#{i}."
                       = t(@qheads[order_line.qhead_id].name)
                     .panel-body
@@ -33,9 +33,9 @@
                               %td{:width=>'30px'}
                                 .text-center= qline.score.to_i
                               %td= qline.name
-        .well.well-sm
-          = button_tag class: 'btn btn-default', type: 'button', onclick: "$(this).button('loading');this.form.submit();", data:{loading_text: t('saving')} do
-            %span.glyphicon.glyphicon-floppy-save
-            = t('save')
-          %input{:type=>'reset', :class => 'btn btn-default'}
+    .panel-footer
+      = button_tag class: 'btn btn-default', type: 'button', onclick: "$(this).button('loading');this.form.submit();", data:{loading_text: t('saving')} do
+        %span.glyphicon.glyphicon-floppy-save
+        = t('save')
+      %input{:type=>'reset', :class => 'btn btn-default'}
 
