--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,6 +29,7 @@
       .container
         .narrow-well
           = render 'layouts/messages'
-          = yield
+          .container.container-form
+            = yield
     #footer
       .container
