--- a/app/views/tqrdc/qheads/_form.html.haml
+++ b/app/views/tqrdc/qheads/_form.html.haml
@@ -5,7 +5,7 @@
     = #f.input :id
     = f.input :name
     = f.input :description
-    = f.input :group , :as => :autocomplete, :source_query => autocomplete_group_name_tqrdc_groups_url , :items => 20, :minLength => 1
+    = f.input :group_id , :collection => Tqrdc::Group.all #f.input :group , :as => :autocomplete, :source_query => autocomplete_group_name_tqrdc_groups_url , :items => 20, :minLength => 1
     = f.input :score
 
     = f.input :remark
