--- a/app/views/tqrdc/qlines/index.html.haml
+++ b/app/views/tqrdc/qlines/index.html.haml
@@ -47,17 +47,17 @@
 
           %td= tqrdc_qline.description
 
-          %td= tqrdc_qline.group_id
+          %td= tqrdc_qline.group
 
           %td= tqrdc_qline.score
 
-          %td= tqrdc_qline.qhead_id
+          %td= tqrdc_qline.qhead
 
-          %td= tqrdc_qline.owner_id
+          %td= tqrdc_qline.owner
 
-          %td= tqrdc_qline.creator_id
+          %td= tqrdc_qline.creator
 
-          %td= tqrdc_qline.updater_id
+          %td= tqrdc_qline.updater
 
 
 %h5
