--- a/app/views/tqrdc/qheads/index.html.haml
+++ b/app/views/tqrdc/qheads/index.html.haml
@@ -14,7 +14,7 @@
       %tr
         %th= t('action')
 
-        %th= t('attributes.id')
+
 
         %th= t('attributes.name')
 
@@ -41,23 +41,21 @@
             = link_to t('delete'), tqrdc_qhead, :method => :delete, :data => { :confirm => t('confirm_delete')}
 
 
-          %td= tqrdc_qhead.id
-
           %td= tqrdc_qhead.name
 
           %td= tqrdc_qhead.description
 
-          %td= tqrdc_qhead.group_id
+          %td= tqrdc_qhead.group
 
           %td= tqrdc_qhead.score
 
           %td= tqrdc_qhead.remark
 
-          %td= tqrdc_qhead.owner_id
+          %td= tqrdc_qhead.owner
 
-          %td= tqrdc_qhead.creator_id
+          %td= tqrdc_qhead.creator
 
-          %td= tqrdc_qhead.updater_id
+          %td= tqrdc_qhead.updater
 
 
 %h5
