--- a/app/views/tqrdc/qlines/_form.html.haml
+++ b/app/views/tqrdc/qlines/_form.html.haml
@@ -9,11 +9,11 @@
 
     = f.input :description
 
-    = f.input :group_id
+    = f.input :group_id , collection: Tqrdc::Group.all
 
     = f.input :score
 
-    = f.input :qhead_id
+    = f.input :qhead_id , collection: Tqrdc::Qhead.all
 
     = f.input :owner, :as => :autocomplete, :source_query => autocomplete_user_email_users_url, :items => 20, :minLength => 1,
       :hint => '請使用大寫輸入負責人, 1個字符后系統會給出建議清單'
