--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -16,6 +16,7 @@
         %th= t('attributes.email')
         %th= t('attributes.username')
         %th= t('attributes.role')
+        %th= "廠區"
     %tbody
       - @users.each do |user|
         %tr
@@ -27,6 +28,7 @@
           %td= user.email
           %td= user.username
           %td= user.role
+          %td= user.territory
 
 %h5
   = link_to t('new_user'), new_user_path
