--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,7 @@
       .container
         .narrow-well
           = render 'layouts/messages'
-          .container.container-form
+          .container
             = yield
     #footer
       .container
