--- a/app/views/tqrdc/flows/index.html.haml
+++ b/app/views/tqrdc/flows/index.html.haml
@@ -53,23 +53,23 @@
 
           %td= tqrdc_flow.description
 
-          %td= tqrdc_flow.qhead_id
+          %td= tqrdc_flow.qhead
 
           %td= tqrdc_flow.role
 
           %td= tqrdc_flow.territory
 
-          %td= tqrdc_flow.user_id
+          %td= tqrdc_flow.user
 
           %td= tqrdc_flow.seq
 
           %td= tqrdc_flow.next_seq
 
-          %td= tqrdc_flow.owner_id
+          %td= tqrdc_flow.owner
 
-          %td= tqrdc_flow.creator_id
+          %td= tqrdc_flow.creator
 
-          %td= tqrdc_flow.updater_id
+          %td= tqrdc_flow.updater
 
 
 %h5
