--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,4 +16,4 @@
 
 th{background-color: #F8F8F8;}
 a:hover {color: red; text-decoration:underline;}
-.container-form{max-width: 768px}
+.container-form{max-width: 768px;}
