--- a/app/views/tqrdc/scores/_form.html.haml
+++ b/app/views/tqrdc/scores/_form.html.haml
@@ -1,24 +1,42 @@
-.panel.panel-default
-  .panel-body
-    .col-xs-6
-      %dl.dl-horizontal
-        %dt= t('attributes.supplier')
-        %dd
-          = @order.supplier.supplier
-          = @order.supplier
-        %dt= t('attributes.period')
-        %dd
-          = @order.period
-        %dt= t('attributes.u1_user')
-        %dd= @u1_users.join(',')
-        %dt= t('attributes.u2_user')
-        %dd= @u2_users.join(',')
-        %dt= t('attributes.u3_user')
-        %dd= @u3_users.join(',')
-        %dt= t('attributes.u4_user')
-        %dd= @u4_users.join(',')
-    .col-xs-6
-      %dl.dl-horizontal
+%table.table.table-responsive.table-condensed.table-striped.table-bordered
+  %tbody
+    %tr
+      %td{width:'10%'}
+        .text-right
+          %b= t('attributes.supplier')
+      %td{width: '40%'}
+        = @order.supplier.supplier
+        = @order.supplier
+      %td{width: '10%'}
+        .text-right
+          %b= t('attributes.period')
+      %td{width: '40%'}
+        = @order.period
+    %tr
+      %td.text-right
+        %b= t('attributes.u1_user')
+      %td= @u1_users.join(', ')
+      %td
+      %td
+    %tr
+      %td.text-right
+        %b= t('attributes.u2_user')
+      %td= @u2_users.join(', ')
+      %td
+      %td
+    %tr
+      %td.text-right
+        %b= t('attributes.u3_user')
+      %td= @u3_users.join(', ')
+      %td
+      %td
+    %tr
+      %td.text-right
+        %b= t('attributes.u4_user')
+      %td= @u4_users.join(', ')
+      %td
+      %td
+
 
 = form_tag(update_scores_tqrdc_scores_url, method: 'post') do |f|
 
@@ -43,15 +61,15 @@
                 = @qheads[order_line.qhead_id].name
                 %p
                 = @qheads[order_line.qhead_id].description
-              %th{:width=> '30px'}
+              %th{:width=> '30px', :class=> 'text-center'}
                 = t('attributes.score')
-              %th{:width=> '30px'}
+              %th{:width=> '30px', :class=> 'text-center'}
                 = t('attributes.u1_user')
-              %th{:width=> '30px'}
+              %th{:width=> '30px', :class=> 'text-center'}
                 = t('attributes.u2_user')
-              %th{:width=> '30px'}
+              %th{:width=> '30px', :class=> 'text-center'}
                 = t('attributes.u3_user')
-              %th{:width=> '30px'}
+              %th{:width=> '30px', :class=> 'text-center'}
                 = t('attributes.u4_user')
           %tbody
             - Tqrdc::Qline.where(:qhead_id => order_line.qhead.id).each do |qline|
@@ -64,39 +82,41 @@
                 %td.text-center{:style=>'vertical-align: middle;'}
                   = qline.score.to_i
                 %td.text-center{:style=>'vertical-align: middle;'}
-                  - if order_line.u1_user_id == current_user.id and order_line.u1_sign_date.nil?
+                  - if order_line.u1_user_id == current_user.id
                     %input{type: 'radio', class:'radio', id:"rd_u1_#{order_line.id}_#{qline.id}", name:"rd_u1_#{order_line.id}", value: qline.id, checked: (order_line.u1_qline_id == qline.id)}
                   - elsif order_line.u1_qline_id == qline.id
-                    V
+                    %div{'data-toggle'=> 'tooltip', :title=> order_line.u1_comment} V
                 %td.text-center{:style=>'vertical-align: middle;'}
                   - if order_line.u2_user_id == current_user.id and order_line.u2_sign_date.nil?
                     %input{type: 'radio', class:'radio', id:"rd_u2_#{order_line.id}_#{qline.id}", name:"rd_u2_#{order_line.id}", value: qline.id, checked: (order_line.u2_qline_id == qline.id)}
                   - elsif order_line.u2_qline_id == qline.id
-                    V
+                    %div{'data-toggle'=> 'tooltip', :title=> order_line.u2_comment} V
                 %td.text-center{:style=>'vertical-align: middle;'}
                   - if order_line.u3_user_id == current_user.id and order_line.u3_sign_date.nil?
                     %input{type: 'radio', class:'radio', id:"rd_u3_#{order_line.id}_#{qline.id}", name:"rd_u3_#{order_line.id}", value: qline.id, checked: (order_line.u3_qline_id == qline.id)}
                   - elsif order_line.u3_qline_id == qline.id
-                    V
+                    %div{'data-toggle'=> 'tooltip', :title=> order_line.u3_comment} V
                 %td.text-center{:style=>'vertical-align: middle;'}
                   - if order_line.u4_user_id == current_user.id and order_line.u4_sign_date.nil?
                     %input{type: 'radio', class:'radio', id:"rd_u4_#{order_line.id}_#{qline.id}", name:"rd_u4_#{order_line.id}", value: qline.id, checked: (order_line.u4_qline_id == qline.id)}
                   - elsif order_line.u4_qline_id == qline.id
-                    V
+                    %div{'data-toggle'=> 'tooltip', :title=> order_line.u4_comment} V
           %tfoot
             %tr
               %td
               %td{colspan:6}
                 - if order_line.u1_user_id == current_user.id
                   %textarea.form-control{:name => "cm_u1_#{order_line.id}", :id => "cm_u1_#{order_line.id}", :placeholder => 'Comments / 意見'}
+                    = order_line.u1_comment
                 - elsif order_line.u2_user_id == current_user.id
                   %textarea.form-control{:name => "cm_u2_#{order_line.id}", :id => "cm_u2_#{order_line.id}", :placeholder => 'Comments / 意見'}
+                    = order_line.u2_comment
                 - elsif order_line.u3_user_id == current_user.id
                   %textarea.form-control{:name => "cm_u3_#{order_line.id}", :id => "cm_u3_#{order_line.id}", :placeholder => 'Comments / 意見'}
+                    = order_line.u3_comment
                 - else order_line.u4_user_id == current_user.id
                   %textarea.form-control{:name => "cm_u4_#{order_line.id}", :id => "cm_u4_#{order_line.id}", :placeholder => 'Comments / 意見'}
-
-
+                    = order_line.u4_comment
     %hr
 
   .form-actions
@@ -104,3 +124,12 @@
     = button_tag class: 'btn btn-danger', type: 'button', onclick: "$(this).button('loading');this.form.submit();", data:{loading_text: t('saving')} do
       %span.glyphicon.glyphicon-floppy-save
       = t('save')
+
+:javascript
+  $(document).ready(function () {
+
+    $('[data-toggle="tooltip"]').each(function(){
+      $(this).tooltip();
+    });
+
+  });
